feat: add Snippets viewer + CRUD, export batching, draggable overlay & hotkey
add view-snippets command (manifest) with default Ctrl+Shift+Q to open a new Snippets Viewer.

new view-snippets.js: full-featured snippets UI injected into the active tab

list + detail views, filters (subject/grade/page/exported), pagination

edit modal (update snippet), delete action, preview, metadata display

polished Aurora-inspired styling and responsive layout

background.js

handle view-snippets command and inject view-snippets.js

new message handlers:

view-snippets — returns paginated, filtered snippets and pagination metadata

update-snippet — update an existing snippet in chrome.storage.local

delete-snippet — remove a snippet by id

export-snippets rewritten to:

filter & sort unexported snippets, chunk them (default 15) and download each chunk as a JSON file (prevents huge single downloads)

mark exported snippets as exported after successful download

added chunkArray helper for export batching

overlay.js

make the overlay draggable: add header, pointer handlers, edge clamping and persistent position saved to chrome.storage.local

minor UI tweaks: overflow fixes, textarea style cleanup, unit map fix (corrected index)

small code cleanup (removed stray console.log)

manifest.json

register view-snippets command and suggested key

.yaml

cleaned / simplified system prompt content (removed large block)

--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,12 @@
         "default": "Ctrl+Shift+Y"
       },
       "description": "Capture selected/copy text and open overlay"
+    },
+    "view-snippets": {
+      "suggested_key": {
+        "default": "Ctrl+Shift+Q"
+      },
+      "description": "view snippets"
     }
   },
   "action": {
