--- a/manifest.json
+++ b/manifest.json
@@ -24,5 +24,11 @@
   },
   "action": {
     "default_title": "PDF Hotkey Extractor"
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [".yaml"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
